--- a/image_resize.ipynb
+++ b/image_resize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -13,21 +13,6 @@
       "✅ Resized and saved: C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_14_annotated_resized.png\n",
       "✅ Resized and saved: C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_15_annotated_resized.png\n",
       "✅ Resized and saved: C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_1_annotated_resized.png\n",
-      "✅ Resized and saved: C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_20_annotated_resized.png\n",
-      "✅ Resized and saved: C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_21_annotated_resized.png\n",
-      "✅ Resized and saved: C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_24_annotated_resized.png\n",
-      "✅ Resized and saved: C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_26_annotated_resized.png\n",
-      "✅ Resized and saved: C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_28_annotated_resized.png\n",
-      "✅ Resized and saved: C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_2_annotated_resized.png\n",
-      "✅ Resized and saved: C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_30_annotated_resized.png\n",
-      "✅ Resized and saved: C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_31_annotated_resized.png\n",
-      "✅ Resized and saved: C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_35_annotated_resized.png\n",
-      "✅ Resized and saved: C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_3_annotated_resized.png\n",
-      "✅ Resized and saved: C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_40_annoated_resized.png\n",
-      "✅ Resized and saved: C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_43_annotated_resized.png\n",
-      "✅ Resized and saved: C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_44_annotated_resized.png\n",
-      "✅ Resized and saved: C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_5_annotated_resized.png\n",
-      "✅ Resized and saved: C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_9_annotated_resized.png\n",
       "\n",
       "🎉 All masks resized to match stacked image resolution!\n"
      ]
@@ -38,7 +23,7 @@
     "import os\n",
     "\n",
     "# Input/Output paths\n",
-    "input_mask_dir = r\"C:\\Users\\wasif\\Desktop\\Annotated Images\\masks\\\"\n",
+    "input_mask_dir = r\"C:\\Users\\wasif\\Downloads\\extra\"\n",
     "output_mask_dir = r\"C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\"\n",
     "os.makedirs(output_mask_dir, exist_ok=True)\n",
     "\n",
@@ -61,6 +46,13 @@
     "\n",
     "print(\"\\n🎉 All masks resized to match stacked image resolution!\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
