Added code changes, excluded large model files

--- a/mask_resizer.ipynb
+++ b/mask_resizer.ipynb
@@ -2,23 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Resized and saved: C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_10_annotated_resized.png\n",
-      "✅ Resized and saved: C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_14_annotated_resized.png\n",
-      "✅ Resized and saved: C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_15_annotated_resized.png\n",
-      "✅ Resized and saved: C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_1_annotated_resized.png\n",
-      "\n",
-      "🎉 All masks resized to match stacked image resolution!\n"
+      "Resized @ C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_10_annotated_resized.png\n",
+      "Resized @ C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_14_annotated_resized.png\n",
+      "Resized @ C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_15_annotated_resized.png\n",
+      "Resized @ C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_1_annotated_resized.png\n"
      ]
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "Author: Wasif Rasool Qazi\n",
+    "Resizer script for Sentinel-2-Dataset\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "\n",
     "from PIL import Image\n",
     "import os\n",
     "\n",
@@ -27,8 +32,8 @@
     "output_mask_dir = r\"C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\"\n",
     "os.makedirs(output_mask_dir, exist_ok=True)\n",
     "\n",
-    "# Target size (based on stacked Sentinel-2 image resolution)\n",
-    "TARGET_SIZE = (10980, 10980)  # width x height\n",
+    "# Target size (wxh)\n",
+    "TARGET_SIZE = (10980, 10980)  \n",
     "\n",
     "# Process all masks\n",
     "for filename in os.listdir(input_mask_dir):\n",
@@ -38,13 +43,11 @@
     "\n",
     "        try:\n",
     "            mask = Image.open(input_path)\n",
-    "            resized_mask = mask.resize(TARGET_SIZE, resample=Image.NEAREST)  # use NEAREST to keep mask labels intact\n",
+    "            resized_mask = mask.resize(TARGET_SIZE, resample=Image.NEAREST)\n",
     "            resized_mask.save(output_path)\n",
-    "            print(f\"✅ Resized and saved: {output_path}\")\n",
+    "            print(f\"Resized @ {output_path}\")\n",
     "        except Exception as e:\n",
-    "            print(f\"❌ Failed to process {filename}: {e}\")\n",
-    "\n",
-    "print(\"\\n🎉 All masks resized to match stacked image resolution!\")\n"
+    "            print(f\"Failed:{filename}: {e}\")"
    ]
   },
   {
