--- a/raw_to_stacked.ipynb
+++ b/raw_to_stacked.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -201,21 +201,29 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "Author: Wasif Rasool Qazi\n",
+    "Processing script for Sentinel-2-Dataset\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "#imports\n",
     "import rasterio\n",
     "from rasterio.enums import Resampling\n",
     "import numpy as np\n",
     "import os\n",
     "\n",
-    "# Define the base directory containing images\n",
-    "base_dir = \"/Users/wasifqazi/Desktop/FYP_Sentinel_2/Sentinel_2_Data/scenes_data\"\n",
+    "# input directory\n",
+    "base_direc = \"/Users/wasifqazi/Desktop/FYP_Sentinel_2/Sentinel_2_Data/scenes_data\"\n",
     "\n",
-    "# Define the output directory where stacked images will be saved\n",
-    "output_dir = \"/Users/wasifqazi/Desktop/FYP_Sentinel_2/output_path\"\n",
+    "# output directory\n",
+    "output_direc = \"/Users/wasifqazi/Desktop/FYP_Sentinel_2/output_path\"\n",
     "\n",
-    "# Ensure the output directory exists\n",
+    "# check\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
-    "# Define required bands\n",
+    "# required bands\n",
     "required_bands = {\n",
     "    \"B02\": \"10m\",  # Blue\n",
     "    \"B03\": \"10m\",  # Green\n",
@@ -231,31 +239,31 @@
     "    \"B09\": \"60m\",  # Water Vapor\n",
     "}\n",
     "\n",
-    "# Loop through each image folder\n",
-    "for image_folder in os.listdir(base_dir):\n",
-    "    folder_path = os.path.join(base_dir, image_folder)\n",
+    "# go through each image folder\n",
+    "for image_folder in os.listdir(base_direc):\n",
+    "    folder_path = os.path.join(base_direc, image_folder)\n",
     "    if not os.path.isdir(folder_path):\n",
-    "        continue  # Skip non-directory files\n",
-    "\n",
+    "        continue  \n",
+    "    # a bit of logging \n",
     "    print(f\"Processing folder: {image_folder}\")\n",
     "\n",
-    "    # Gather paths for required bands only\n",
+    "    # get paths for needed bands\n",
     "    band_paths = {}\n",
     "    for filename in os.listdir(folder_path):\n",
     "        for band_name, resolution in required_bands.items():\n",
-    "            # Check if the band name and resolution both appear in the filename\n",
+    "            # Check if both are in filename\n",
     "            if band_name in filename and resolution in filename and filename.endswith(\".jp2\"):\n",
     "                band_paths[band_name] = os.path.join(folder_path, filename)\n",
     "\n",
-    "    # Check if all required bands are present\n",
+    "    # checking if all bands exist\n",
     "    if len(band_paths) != len(required_bands):\n",
-    "        print(f\"Skipping {image_folder}: Missing required bands.\")\n",
+    "        print(f\"Skipping {image_folder}: Missing the bands needed to process the image.\")\n",
     "        continue\n",
     "\n",
     "    # Sort band paths by the order in required_bands\n",
     "    sorted_band_paths = [band_paths[band] for band in required_bands]\n",
     "\n",
-    "    # Use the first 10m band as the reference for resolution and metadata\n",
+    "    # Use the first 10m band as the reference\n",
     "    reference_band = next(\n",
     "        (path for band, path in band_paths.items() if required_bands[band] == \"10m\"), None\n",
     "    )\n",
@@ -269,7 +277,7 @@
     "        ref_width = ref.width\n",
     "        ref_height = ref.height\n",
     "\n",
-    "    # Stack the required bands (with resampling if necessary)\n",
+    "    # Stack the required bands\n",
     "    stacked_bands = []\n",
     "    for band, band_path in band_paths.items():\n",
     "        with rasterio.open(band_path) as src:\n",
@@ -285,17 +293,17 @@
     "            \n",
     "            stacked_bands.append(data)\n",
     "\n",
-    "    # Validate band shapes (ensure all bands have the same shape)\n",
+    "    # Validate all bands have the same shape\n",
     "    shapes = [band.shape for band in stacked_bands]\n",
     "    if len(set(shapes)) > 1:\n",
-    "        print(f\"Skipping {image_folder}: Bands have inconsistent shapes: {shapes}\")\n",
+    "        print(f\"Skipping {image_folder}: Bands have different shapes: {shapes}\")\n",
     "        continue\n",
     "\n",
     "    # Stack the bands\n",
     "    stacked_array = np.stack(stacked_bands, axis=0)\n",
     "\n",
-    "    # Write the stacked raster for the current image\n",
-    "    output_path = os.path.join(output_dir, f\"{image_folder}_stacked.jp2\")\n",
+    "    # save\n",
+    "    output_path = os.path.join(output_direc, f\"{image_folder}_stacked.jp2\")\n",
     "    with rasterio.open(\n",
     "        output_path,\n",
     "        \"w\",\n",
