--- a/stacked_to_RGB.ipynb
+++ b/stacked_to_RGB.ipynb
@@ -2,33 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Saved: C:\\Users\\wasif\\Desktop\\RGB_IMAGES\\Image_51_RGB.png\n",
-      "✅ Saved: C:\\Users\\wasif\\Desktop\\RGB_IMAGES\\Image_52_RGB.png\n",
-      "✅ Saved: C:\\Users\\wasif\\Desktop\\RGB_IMAGES\\Image_53_RGB.png\n",
-      "✅ Saved: C:\\Users\\wasif\\Desktop\\RGB_IMAGES\\Image_54_RGB.png\n",
-      "✅ Saved: C:\\Users\\wasif\\Desktop\\RGB_IMAGES\\Image_55_RGB.png\n",
-      "✅ Saved: C:\\Users\\wasif\\Desktop\\RGB_IMAGES\\Image_56_RGB.png\n",
-      "✅ Saved: C:\\Users\\wasif\\Desktop\\RGB_IMAGES\\Image_57_RGB.png\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Author: Wasif Rasool Qazi\n",
+    "Coverter script for Sentinel-2-Dataset\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "\n",
     "import rasterio\n",
     "import numpy as np\n",
     "from PIL import Image\n",
     "import os\n",
     "\n",
-    "stacked_dir = r\"C:\\Users\\wasif\\Desktop\\stacked_images\"\n",
+    "\n",
+    "# paths \n",
+    "stacked_dir = r\"c:\\Users\\wasif\\Desktop\\Annotated Images\\stacked\"\n",
     "output_dir = r\"C:\\Users\\wasif\\Desktop\\RGB_IMAGES\"\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
+    "# Takes a band and rescales it\n",
     "def normalize(band):\n",
     "    return ((band - band.min()) / (band.max() - band.min() + 1e-6) * 255).astype(np.uint8)\n",
     "\n",
@@ -47,52 +44,15 @@
     "        rgb = np.stack([normalize(B4), normalize(B3), normalize(B2)], axis=-1)\n",
     "        Image.fromarray(rgb).save(output_path)\n",
     "\n",
-    "        print(f\"✅ Saved: {output_path}\")\n"
+    "        print(f\"Saved @ {output_path}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Saved: C:\\Users\\wasif\\Desktop\\RGB_IMAGES\\Image_50_RGB.png\n"
-     ]
-    }
-   ],
-   "source": [
-    "import rasterio\n",
-    "import numpy as np\n",
-    "from PIL import Image\n",
-    "import os\n",
-    "\n",
-    "stacked_dir = r\"C:\\Users\\wasif\\Desktop\\stacked_images\"\n",
-    "output_dir = r\"C:\\Users\\wasif\\Desktop\\RGB_IMAGES\"\n",
-    "os.makedirs(output_dir, exist_ok=True)\n",
-    "\n",
-    "def normalize(band):\n",
-    "    return ((band - band.min()) / (band.max() - band.min() + 1e-6) * 255).astype(np.uint8)\n",
-    "\n",
-    "# Loop through all stacked images\n",
-    "for filename in os.listdir(stacked_dir):\n",
-    "    if filename.endswith(\"_stacked.jp2\"):\n",
-    "        image_path = os.path.join(stacked_dir, filename)\n",
-    "        image_name = os.path.splitext(filename)[0].replace(\"_stacked\", \"\")\n",
-    "        output_path = os.path.join(output_dir, f\"{image_name}_RGB.png\")\n",
-    "\n",
-    "        with rasterio.open(image_path) as src:\n",
-    "            B4 = src.read(4)\n",
-    "            B3 = src.read(3)\n",
-    "            B2 = src.read(2)\n",
-    "\n",
-    "        rgb = np.stack([normalize(B4), normalize(B3), normalize(B2)], axis=-1)\n",
-    "        Image.fromarray(rgb).save(output_path)\n",
-    "\n",
-    "        print(f\"✅ Saved: {output_path}\")\n"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
