- added a few changes and cleaned up the code

--- a/image_cropping.ipynb
+++ b/image_cropping.ipynb
@@ -9,125 +9,149 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cropping completed.\n",
-      "Land crops saved: 0\n",
-      "Water crops saved: 0\n",
-      "Mixed crops saved: 0\n"
+      "\n",
+      "Processing Image_50_stacked.jp2 and Image_50_stacked.png...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\wasif\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\PIL\\Image.py:3402: DecompressionBombWarning: Image size (120560400 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved 200 crops for Image_50_stacked.jp2.\n",
+      "\n",
+      "Processing Image_52_stacked.jp2 and Image_52_stacked.png...\n",
+      "Saved 200 crops for Image_52_stacked.jp2.\n",
+      "\n",
+      "Cropping complete.\n",
+      "Total crops saved: 400\n"
      ]
     }
    ],
    "source": [
-    "\"\"\"\n",
-    "Author: Wasif Rasool Qazi\n",
-    "Cropping script for Sentinel-2-Dataset\n",
-    "\"\"\"\n",
-    "\n",
-    "\n",
     "import os\n",
     "import numpy as np\n",
     "import rasterio\n",
     "from PIL import Image\n",
+    "import random\n",
     "\n",
-    "# Image paths\n",
-    "imageDir = r\"C:\\Users\\wasif\\Desktop\\AugTest\\images\"\n",
-    "maskDir = r\"C:\\Users\\wasif\\Desktop\\AugTest\\masks\"\n",
-    "OutputPth = r\"C:\\Users\\wasif\\Desktop\\Cropped_balanced\"\n",
-    "\n",
-    "# Threshhold\n",
+    "# path\n",
+    "imageDir = r\"C:\\Users\\wasif\\Desktop\\fine_tuning\\images\"\n",
+    "maskDir = r\"C:\\Users\\wasif\\Desktop\\fine_tuning\\masks\"\n",
+    "outputDir = r\"C:\\Users\\wasif\\Desktop\\fineTuned\"\n",
+    "# config\n",
     "cropSize = 256\n",
-    "maxCropsPerCategory = 10000\n",
-    "targetCropsPerImage = 200   \n",
+    "cropsPerImage = 200\n",
     "\n",
-    "# Categories\n",
-    "categories = ['land', 'water', 'mixed']\n",
-    "for cat in categories:\n",
-    "    os.makedirs(os.path.join(OutputPth, cat, 'images'), exist_ok=True)\n",
-    "    os.makedirs(os.path.join(OutputPth, cat, 'masks'), exist_ok=True)\n",
+    "# output\n",
+    "os.makedirs(os.path.join(outputDir, 'images'), exist_ok=True)\n",
+    "os.makedirs(os.path.join(outputDir, 'masks'), exist_ok=True)\n",
     "\n",
-    "# cat counter\n",
+    "# sort the files\n",
+    "imageFiles = sorted(f for f in os.listdir(imageDir) if f.endswith(\".jp2\"))\n",
+    "maskFiles = sorted(f for f in os.listdir(maskDir) if f.endswith(\".png\"))\n",
     "\n",
-    "categoryCounters = {cat: 0 for cat in categories}\n",
+    "if len(imageFiles) != len(maskFiles):\n",
+    "    print(\"Error: Mismatch between number of images and masks.\")\n",
+    "    exit()\n",
     "\n",
-    "# Classify crop based on mask \n",
-    "def classifyCrop(maskCrop):\n",
-    "    if np.all(maskCrop == 255):\n",
-    "        return \"land\"\n",
-    "    elif np.all(maskCrop == 0):\n",
-    "        return \"water\"\n",
-    "    else:\n",
-    "        return \"mixed\"\n",
+    "globalCounter = 0\n",
     "\n",
-    "# crop Processing\n",
-    "imageFiles = sorted([f for f in os.listdir(imageDir) if f.endswith(\".jp2\")])\n",
-    "maskFiles = sorted([f for f in os.listdir(maskDir) if f.endswith(\".png\")])\n",
-    "\n",
+    "# Process each img mask pair\n",
     "for imgName, maskName in zip(imageFiles, maskFiles):\n",
     "    imgPath = os.path.join(imageDir, imgName)\n",
     "    maskPath = os.path.join(maskDir, maskName)\n",
     "\n",
-    "    with rasterio.open(imgPath) as src:\n",
-    "        image = src.read()\n",
-    "        meta = src.meta\n",
+    "    print(f\"\\nProcessing {imgName} and {maskName}...\")\n",
     "\n",
-    "    mask = np.array(Image.open(maskPath).convert(\"L\"))\n",
-    "    height, width = mask.shape\n",
-    "    numBands = image.shape[0]\n",
+    "    try:\n",
+    "        with rasterio.open(imgPath) as src:\n",
+    "            image = src.read()\n",
+    "            height, width = src.height, src.width\n",
+    "            numBands = src.count\n",
+    "            dtype = src.dtypes[0]\n",
+    "            crs = src.crs\n",
+    "            transformOrig = src.transform\n",
     "\n",
-    "    print(f\"--- Processing {imgName} and {maskName} ---\")\n",
+    "        mask = np.array(Image.open(maskPath).convert(\"L\"))\n",
     "\n",
-    "    cropCount = 0\n",
-    "    for y in range(0, height - cropSize + 1, cropSize):\n",
-    "        for x in range(0, width - cropSize + 1, cropSize):\n",
-    "            if cropCount >= targetCropsPerImage:\n",
-    "                break\n",
+    "        if mask.shape != (height, width):\n",
+    "            print(f\"Size mismatch. Skipping {imgName}.\")\n",
+    "            continue\n",
     "\n",
-    "            cropImg = image[:, y:y + cropSize, x:x + cropSize]\n",
-    "            cropMask = mask[y:y + cropSize, x:x + cropSize]\n",
-    "            label = classifyCrop(cropMask)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error reading {imgName}: {e}\")\n",
+    "        continue\n",
     "\n",
-    "            if categoryCounters[label] >= maxCropsPerCategory:\n",
-    "                continue\n",
+    "    # all possible crops\n",
+    "    cropCoords = [(x, y) for y in range(0, height - cropSize + 1, cropSize)\n",
+    "                         for x in range(0, width - cropSize + 1, cropSize)]\n",
     "\n",
-    "            cropIndex = categoryCounters[label]\n",
-    "            baseName = f\"{label}_crop_{cropIndex}\"\n",
+    "    if not cropCoords:\n",
+    "        print(\"No crops possible (image too small). Skipping.\")\n",
+    "        continue\n",
     "\n",
-    "            imagePth = os.path.join(OutputPth, label, 'images', f\"{baseName}.jp2\")\n",
-    "            maskOutPath = os.path.join(OutputPth, label, 'masks', f\"{baseName}.png\")\n",
+    "    random.shuffle(cropCoords)\n",
     "\n",
-    "            transform = rasterio.transform.from_origin(\n",
-    "                meta[\"transform\"][2] + x * meta[\"transform\"][0],\n",
-    "                meta[\"transform\"][5] + y * meta[\"transform\"][4],\n",
-    "                meta[\"transform\"][0],\n",
-    "                meta[\"transform\"][4]\n",
-    "            )\n",
+    "    saved = 0\n",
+    "    for x, y in cropCoords:\n",
+    "        if saved >= cropsPerImage:\n",
+    "            break\n",
     "\n",
-    "            try:\n",
-    "                with rasterio.open(\n",
-    "                    imagePth, \"w\",\n",
-    "                    driver=\"JP2OpenJPEG\",\n",
-    "                    height=cropSize,\n",
-    "                    width=cropSize,\n",
-    "                    count=numBands,\n",
-    "                    dtype=image.dtype,\n",
-    "                    crs=meta[\"crs\"],\n",
-    "                    transform=transform\n",
-    "                ) as dst:\n",
-    "                    dst.write(cropImg)\n",
+    "        cropImg = image[:, y:y+cropSize, x:x+cropSize]\n",
+    "        cropMask = mask[y:y+cropSize, x:x+cropSize]\n",
     "\n",
-    "                Image.fromarray(cropMask).save(maskOutPath)\n",
-    "                categoryCounters[label] += 1\n",
-    "                cropCount += 1\n",
+    "        baseName = f\"{os.path.splitext(imgName)[0]}_crop_{globalCounter}\"\n",
+    "        imgOutPath = os.path.join(outputDir, 'images', f\"{baseName}.jp2\")\n",
+    "        maskOutPath = os.path.join(outputDir, 'masks', f\"{baseName}.png\")\n",
     "\n",
-    "            except Exception as e:\n",
-    "                print(f\"Error saving crop {baseName},{e}\")\n",
+    "        cropTransform = rasterio.transform.from_origin(\n",
+    "            transformOrig.c + x * transformOrig.a,\n",
+    "            transformOrig.f + y * transformOrig.e,\n",
+    "            transformOrig.a,\n",
+    "            transformOrig.e\n",
+    "        )\n",
     "\n",
-    "    print(f\"Finished processing: {imgName} — {cropCount} crops saved.\\n\")\n",
+    "        try:\n",
+    "            with rasterio.open(\n",
+    "                imgOutPath, \"w\",\n",
+    "                driver=\"JP2OpenJPEG\",\n",
+    "                height=cropSize,\n",
+    "                width=cropSize,\n",
+    "                count=numBands,\n",
+    "                dtype=dtype,\n",
+    "                crs=crs,\n",
+    "                transform=cropTransform\n",
+    "            ) as dst:\n",
+    "                dst.write(cropImg)\n",
     "\n",
-    "# check\n",
-    "print(\"Cropping completed.\")\n",
-    "for cat in categories:\n",
-    "    print(f\"{cat.capitalize()} crops saved: {categoryCounters[cat]}\")\n"
+    "            Image.fromarray(cropMask).save(maskOutPath)\n",
+    "\n",
+    "            globalCounter += 1\n",
+    "            saved += 1\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error saving crop {baseName}: {e}\")\n",
+    "\n",
+    "    print(f\"Saved {saved} crops for {imgName}.\")\n",
+    "\n",
+    "print(\"\\nCropping complete.\")\n",
+    "print(f\"Total crops saved: {globalCounter}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
