Update notebooks and clean up old model files

--- a/mask_resizer.ipynb
+++ b/mask_resizer.ipynb
@@ -2,17 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Resized @ C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_10_annotated_resized.png\n",
-      "Resized @ C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_14_annotated_resized.png\n",
-      "Resized @ C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_15_annotated_resized.png\n",
-      "Resized @ C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\\image_1_annotated_resized.png\n"
+      "Resized @ C:\\Users\\wasif\\Desktop\\multispectral\\masks_resized\\image_10_annotated_resized.png\n",
+      "Resized @ C:\\Users\\wasif\\Desktop\\multispectral\\masks_resized\\image_14_annotated_resized.png\n",
+      "Resized @ C:\\Users\\wasif\\Desktop\\multispectral\\masks_resized\\image_15_annotated_resized.png\n",
+      "Resized @ C:\\Users\\wasif\\Desktop\\multispectral\\masks_resized\\image_1_annotated_resized.png\n",
+      "Resized @ C:\\Users\\wasif\\Desktop\\multispectral\\masks_resized\\image_20_annotated_resized.png\n",
+      "Resized @ C:\\Users\\wasif\\Desktop\\multispectral\\masks_resized\\image_21_annotated_resized.png\n",
+      "Resized @ C:\\Users\\wasif\\Desktop\\multispectral\\masks_resized\\image_24_annotated_resized.png\n",
+      "Resized @ C:\\Users\\wasif\\Desktop\\multispectral\\masks_resized\\image_26_annotated_resized.png\n",
+      "Resized @ C:\\Users\\wasif\\Desktop\\multispectral\\masks_resized\\image_28_annotated_resized.png\n",
+      "Resized @ C:\\Users\\wasif\\Desktop\\multispectral\\masks_resized\\image_2_annotated_resized.png\n",
+      "Resized @ C:\\Users\\wasif\\Desktop\\multispectral\\masks_resized\\image_30_annotated_resized.png\n",
+      "Resized @ C:\\Users\\wasif\\Desktop\\multispectral\\masks_resized\\image_31_annotated_resized.png\n",
+      "Resized @ C:\\Users\\wasif\\Desktop\\multispectral\\masks_resized\\image_35_annotated_resized.png\n",
+      "Resized @ C:\\Users\\wasif\\Desktop\\multispectral\\masks_resized\\image_3_annotated_resized.png\n",
+      "Resized @ C:\\Users\\wasif\\Desktop\\multispectral\\masks_resized\\image_40_annoated_resized.png\n",
+      "Resized @ C:\\Users\\wasif\\Desktop\\multispectral\\masks_resized\\image_43_annotated_resized.png\n",
+      "Resized @ C:\\Users\\wasif\\Desktop\\multispectral\\masks_resized\\image_44_annotated_resized.png\n",
+      "Resized @ C:\\Users\\wasif\\Desktop\\multispectral\\masks_resized\\image_5_annotated_resized.png\n",
+      "Resized @ C:\\Users\\wasif\\Desktop\\multispectral\\masks_resized\\image_9_annotated_resized.png\n"
      ]
     }
    ],
@@ -28,8 +43,8 @@
     "import os\n",
     "\n",
     "# Input/Output paths\n",
-    "input_mask_dir = r\"C:\\Users\\wasif\\Downloads\\extra\"\n",
-    "output_mask_dir = r\"C:\\Users\\wasif\\Desktop\\Annotated Images\\masks_resized\"\n",
+    "input_mask_dir = r\"C:\\Users\\wasif\\Desktop\\multispectral\\masks\"\n",
+    "output_mask_dir = r\"C:\\Users\\wasif\\Desktop\\multispectral\\masks_resized\"\n",
     "os.makedirs(output_mask_dir, exist_ok=True)\n",
     "\n",
     "# Target size (wxh)\n",
